2007-12-11  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* libgimpbase/gimpwire.c (_gimp_read_read_string): NULL-terminate
	all strings coming in over the wire protocol. Should help with bug
	#498207.

2007-12-10  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_tool_events): if a device change happens, make
	sure we update the new active tool's focus display and modifier
	state. Fixes most of bug #493176.

2007-12-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* app/paint/gimpheal.c: make the healing brush work properly
	when dragged.  Fixes bug #492575.

2007-12-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* app/display/gimpdisplayshell-draw.c: draw grid correctly when
	non-integer spacing is combined with a large offset.  Fixes
	bug #502374.

	* app/core/gimpimage-snap.c: make snapping to grid work when
	coord is less than the grid offset.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* configure.in: fixed indentation of --help output.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/pygimp/pygimp-colors.c
	* plug-ins/pygimp/gimpcolormodule.c: removed calls to PyMem_Free().

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/pygimp/plug-ins/foggify.py: push/pop a context instead
	of manually restoring the background color.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/batch.c (batch_run): only show the message about using the
	default batch interpreter when running in verbose mode.

2007-12-05  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/actions/tool-options-commands.c
	(tool_options_save_to_cmd_callback)
	(tool_options_restore_from_cmd_callback): Only care about
	GIMP_CONFIG_PARAM_SERIALIZE properties, fixes bug #498948.

2007-12-04  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:
